Resolve issue with pixel jump

--- a/app/sass/appwidget.scss
+++ b/app/sass/appwidget.scss
@@ -60,6 +60,9 @@ box-shadow: 0px 1px 5px 1px rgba(0,0,0,0.19);
 .rating {
     padding: 0.5em 0 .3em 0;
     font-size:0.8em;
+    float: left;
+    width: 100%;
+    min-height: 75px;
 }
 .no-ratings{
     font-size:0.8em;
